--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div id="container"></div>
+  <div id="root"></div>
 </body>
 
 <script src="//cdn.iframe.ly/embed.js" async></script>
