Add docker support

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#ffffff">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
   <title>React.js reference</title>
 </head>
 
@@ -13,6 +15,9 @@
 </body>
 
 <script src="//cdn.iframe.ly/embed.js" async></script>
+<script src="https://unpkg.com/react/umd/react.production.js" crossorigin />
+<script src="https://unpkg.com/react-dom/umd/react-dom.production.js" crossorigin/>
+<script src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js" crossorigin/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
 </html>
