:newspaper: Start table integration

--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,11 @@
 </body>
 
 <script src="//cdn.iframe.ly/embed.js" async></script>
-<script src="https://unpkg.com/react/umd/react.production.js" crossorigin />
-<script src="https://unpkg.com/react-dom/umd/react-dom.production.js" crossorigin/>
-<script src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js" crossorigin/>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+<script src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+<script src="https://unpkg.com/react/umd/react.production.js" crossorigin></script>
+<script src="https://unpkg.com/react-dom/umd/react-dom.production.js" crossorigin></script>
+<script src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js" crossorigin></script>
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+<link rel="stylesheet" href="//cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
 </html>
