Change docker-compose names

--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,12 @@
   <link rel="stylesheet" href="/theme/css/theme.min.css?v=1.0">
   <script src="/theme/js/vendor.min.js"></script>
   <script src="/theme/js/theme.min.js"></script>
-  <title>ReactJS reference</title>
+  <title>Reactjs reference</title>
 </head>
 
 <body class="has-navbar-vertical-aside navbar-vertical-aside-show-xl footer-offset">
   <div id="root"></div>
 </body>
-
 
 <script src="//cdn.iframe.ly/embed.js" async></script>
 </html>
